# spatial-shell

./: .gitignore  CHANGES.md  Makefile  README.md  dune  dune-project  dune-workspace  json-decoder.opam  miam.opam  mltp-ipc.opam  spatial-dev.opam  spatial-shell-contrib.opam  spatial-shell.opam  sway-ipc.opam
.github/workflows/: build.yml
contrib/: spatialbar.sh
contrib/i3blocks/: README.md  config
contrib/sway/: spatial.conf
contrib/waybar/: README.md  config  dune  main.ml  spatialbar.py  style.css
lib/json_decoder/: dune  json_decoder.ml  json_decoder.mli
lib/jsoner/: dune  json_decoder.ml  json_encoder.ml  jsoner.ml  jsoner.mli
lib/miam/: dune  miam.ml  miam.mli  slice.ml
lib/mltp_ipc/: dune  raw_message.ml  socket.ml  socket.mli
lib/spatial_ipc/: dune  spatial-ipc.7.scd  spatial_ipc.ml  spatial_ipc.mli
lib/spatial_sway_ipc/: dune  spatial_sway_ipc.ml  spatial_sway_ipc.mli
lib/sway_ipc/: dune  socket.ml  sway_ipc.ml  sway_ipc.mli
lib/sway_ipc_types/: command.ml  dune  event.ml  input_device.ml  libinput.ml  message.ml  node.ml  output.ml  raw_message.ml  rect.ml  seat.ml  sway_version.ml  workspace.ml  workspace_id.ml
scripts/: prepare-release-artifacts.sh
